# sui-move-interface-extractor2

./: .gitignore  Cargo.toml  README.md  UPSTREAM_ISSUE.md
results/: input_packages.jsonl  mainnet_1000_verification.jsonl  summary.json
results/corpus_mainnet_1000/: corpus_report.jsonl  corpus_summary.json  index.jsonl
src/: main.rs
