[package]
name = "sui-move-interface-extractor2"
version = "0.1.0"
edition = "2021"
description = "Extract and verify Move bytecode interfaces against RPC normalized modules"
license = "Apache-2.0"
repository = "https://github.com/Evan-Kim2028/sui-move-interface-extractor2"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Local patched Sui checkout (see UPSTREAM_ISSUE.md for details)
# Update these paths to point to your local sui checkout with the bitwise typing fix
move-binary-format = { path = "vendor/sui/external-crates/move/crates/move-binary-format" }
move-model-2 = { path = "vendor/sui/external-crates/move/crates/move-model-2" }
move-stackless-bytecode-2 = { path = "vendor/sui/external-crates/move/crates/move-stackless-bytecode-2" }
move-core-types = { path = "vendor/sui/external-crates/move/crates/move-core-types" }
sui-sdk = { path = "vendor/sui/crates/sui-sdk" }


